# bevy_web_test

./: Cargo.toml  bacon.toml  bevy_web_test.d.ts  bevy_web_test.js  bevy_web_test_bg.wasm.d.ts  index.html
src/: lib.rs  main.rs
